--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
     --light-color-1:lightblue;
     --light-color-2:gray;
 
-    --dark-color-1:green;
-    --dark-color-2:black;
+    --dark-color-1:gray;
+    --dark-color-2:lightblue;
 
 
 
@@ -27,8 +27,12 @@
     --button-dot-color-dark-theme:var(--dark-color-1);
     
     --nav-color-light-theme:lightblue;
+    --nav-color-dark-theme:gray;
 
-    --hover-color-light-theme:gray;
+    --hover-color-light-theme:rgb(78, 78, 78);
+
+    --scrollbar-color:#bdc3c7;
+    --scrollbar-thumb-color:gray;
     
     --invert-color:50%;
 }
@@ -37,8 +41,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    -ms-overflow-style: none;
     font-family: 'Comfortaa', cursive;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar{
+    background-color: var(--scrollbar-color);
+    width: 10px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--scrollbar-thumb-color);
+    border-radius: 30px;
 }
 body{
     /* background-color: var(--bg-color-light-theme); */
@@ -53,16 +67,14 @@ body.light{
     color: var(--text-color-light-theme);
     transition: 1s ease-in;
 }
-*::-webkit-scrollbar{
-    display: none;
-}
 .logo-img{
     width: 70px;
     transition: 1s ease-in;
     filter: invert(var(--invert-color));
 }
 .logo-img.dark{
-    filter: invert(0%);
+    /* filter: invert(0%); */
+    width: 0px;
 }
 .logo-name, .logo-paragraf{
     font-family: 'Comfortaa', cursive;
@@ -77,6 +89,7 @@ body.light{
     display: flex;
     align-items: center;
     margin:20px ;
+    height: 100px;
 }
 nav{
     min-height: 70px;
@@ -84,11 +97,11 @@ nav{
     
     display: flex;
     justify-content: space-around;
-    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 10;
+    overflow: hidden;
 }
 .links{
     display: flex;
@@ -107,8 +120,10 @@ a{
 }
 a:hover{
     color: var(--hover-color-light-theme);
+    transition: 0.3s ease-in;
 }
 .switch-button{
+    margin-top: 35px;
     width: 70px;
     height: 30px;
     background-color: var(--button-color-light-theme);
@@ -116,6 +131,7 @@ a:hover{
     display: flex;
     align-items: center;
     position: relative;
+    cursor: pointer;
 }
 .switch-button.light{
     background-color:var(--button-color-light-theme);
@@ -152,13 +168,17 @@ a:hover{
 
         flex-direction: column;
 
-        background-color: var(--nav-color-light-theme);
-
         clip-path: circle(100px at 90% -15%);
         -webkit-clip-path:circle(100px at 90% -15%);
         transition: 1s ease-out;
         opacity: 0.9;
-        backdrop-filter: blur(10px);
+        backdrop-filter: blur(1 0px);
+
+        z-index: 100;
+    }
+    .links.light{
+        background-color: var(--nav-color-light-theme);
+
     }
     .link{
         letter-spacing: 30px;
@@ -183,6 +203,9 @@ a:hover{
         clip-path: circle(1300px at 90% -15%);
         -webkit-clip-path:circle(1300px at 90% -15%);
     }
+    .links.dark{
+        background-color: var(--nav-color-dark-theme);
+    }
     .line{
         width: 25px;
         height: 4px;
@@ -190,8 +213,16 @@ a:hover{
         margin:5px;
     }
     .burger{
-        z-index: 2;
+        z-index: 101;
         cursor: pointer;
+        margin-top: 35px;
+    }
+    .burger.display-none{
+        pointer-events: none;
+    }
+    nav{
+        width: 100vw;
+        height: 100vh;
     }
 } 
 .header-container{
@@ -210,8 +241,14 @@ a:hover{
 .person-img{
     width: 500px;
 }
-.text{
+#text1, #text2{
     width: 500px;
+}
+#text1{
+    color: var(--light-color-2);
+}
+#text2{
+    color: var(--light-color-1);
 }
 h2{
     margin: 10px;
